--- a/src/main/webapp/login_test.html
+++ b/src/main/webapp/login_test.html
@@ -123,7 +123,8 @@
                                    alert("学生,欢迎登陆");
                                    window.location.replace("stu_index_test.html");
                                } else if (role == "TEACHER") {
-                                   alert("老师,欢迎登陆")
+                                   alert("老师,欢迎登陆");
+                                   window.location.replace("teacher_index_test.html");
                                }
                            } else {
                                alert("账号密码或身份错误,请重新输入!");
